<resources>
    <string name="app_name">DocteurGarage</string>
    <string name="vehicles">Véhicules</string>
    <string name="reminders">Rappels</string>
    <string name="service_book">Carnet de bord</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_car">Ajouter une voiture</string>
    <string name="car_image">Car image</string>
    <string name="enter_the_content_here">Rentrer la marque</string>
    <string name="type_your_car_content">Marque du véhicule :</string>
    <string name="car_one">Car One</string>
    <string name="guides">Guides</string>
    <string name="title_guide">Titre</string>
    <string name="date_guide">Date</string>
    <string name="car_name">La Voiture</string>
    <string name="car_kilometers">Compteur à %1$d kms. </string>
    <string name="car_last_emptying">Dernière vidange à %1$s kms.</string>
    <string name="car_last_checkup">Dernière contrôle à %1$s kms.</string>
    <string name="car_counters_develop">Afficher les compteurs</string>
    <string name="car_levels_develop">Afficher les niveaux</string>
    <string name="car_motor_oil_level">Huile moteur faite à %1$s kms.</string>
    <string name="car_cooling_liquid_level">Liquide de refroidissement fait à %1$s kms.</string>
    <string name="car_washing_liquid_level">Lave-vitres fait à %1$s kms.</string>
    <string name="car_anotations_develop">Afficher les annotations</string>
    <string name="car_oil_filter_annotation">Filtre à huile changé à %1$s kms.</string>
    <string name="car_gasole_filter_annotation">Filtre à gasoil changé à %1$s kms.</string>
    <string name="car_air_filter_annotation">Filtre à air changé à %1$s kms.</string>
    <string name="car_clutch_annotation">Embrayage changé à %1$s kms.</string>
    <string name="car_front_tires_annotation">Pneus avant changés à %1$s kms.</string>
    <string name="car_back_tires_annotation">Pneus arrière changés à %1$s kms.</string>
    <string name="car_brakes_annotation">Freins changés à %1$s kms.</string>
    <string name="car_alternator_belt_annotation">Courroie (altern.) changée à %1$s kms.</string>
    <string name="car_timing_belt_annotation">Courroie (distrib.) changée à %1$s kms.</string>
    <string name="loading_message">Chargement…</string>
    <string name="add_notification">Création</string>
    <string name="view_notification">Consultation</string>
    <string name="add_notification_title_text">Créer une notification</string>
    <string name="notification_pick_date_text">Choisir une date</string>
    <string name="notification_enter_comment_text">Vous pouvez entrer un commentaire ici</string>
    <string name="notification_alarm_name_text">Nom de l\'alarme</string>
    <string name="validate">Valider</string>
    <string name="date">Date :</string>
    <string name="notification_date_chosen_text">Date : %3$s-%3$s-%3$s</string>
</resources>
