<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarFadeDuration="1750"
    android:scrollbarThumbVertical="@drawable/scrollbar_vertical_4dp_24dp"
    tools:context=".ServiceBoardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/car_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/car_name"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_name_tv"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_arrow_drop_down_black_24dp"
            android:drawablePadding="15dp"
            android:text="@string/car_counters_develop"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/car_levels_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_counter_layout"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_arrow_drop_down_black_24dp"
            android:drawablePadding="15dp"
            android:text="@string/car_levels_develop"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/car_annotations_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_levels_tv"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_arrow_drop_down_black_24dp"
            android:drawablePadding="15dp"
            android:text="@string/car_anotations_develop"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!--            Counters           -->
        <LinearLayout
            android:id="@+id/car_counter_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_counter_tv"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/car_kilometers_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_kilometers"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_last_emptying_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_last_emptying"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_last_checkup_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_last_checkup"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>

        <!--            Levels           -->
        <LinearLayout
            android:id="@+id/car_levels_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_levels_tv"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/car_motor_oil_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_motor_oil_level"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_cooling_liquid_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_cooling_liquid_level"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_washing_liquid_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_washing_liquid_level"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>

        <!--            Annotations           -->
        <LinearLayout
            android:id="@+id/car_annotations_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_annotations_tv"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/car_oil_filter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_oil_filter_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_gasole_filter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_gasole_filter_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_air_filter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_air_filter_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_clutch_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_clutch_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_front_tires_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_front_tires_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_back_tires_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_back_tires_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_brakes_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_brakes_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_timing_belt_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_timing_belt_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/car_alternator_belt_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/car_alternator_belt_annotation"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>