<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cars_800_600"
    tools:context=".CarsFragment">

    <Button
        android:id="@+id/add_car_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:background="@color/colorSecondary"
        android:padding="10dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_add_white_24dp"
        android:drawablePadding="10dp"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/add_a_car"/>

    <TextView
        android:id="@+id/add_car_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:visibility="gone"
        android:textSize="22sp"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/type_your_car_content"/>

    <EditText
        android:id="@+id/add_car_content_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_the_content_here"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/add_car_title_tv"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/add_car_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/add_car_content_et">

        <ImageButton
            android:id="@+id/add_control_previous"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="3dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_navigate_before_black_24dp"/>

        <ImageButton
            android:id="@+id/add_control_cancel"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="3dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_cancel_black_24dp"/>

        <ImageButton
            android:id="@+id/add_control_next"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="3dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_navigate_next_black_24dp"/>

    </LinearLayout>

    <View
        android:id="@+id/empty_view_car"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/picture_car_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/empty_view_car"
        android:src="@drawable/ic_directions_car_black_24dp"
        android:contentDescription="@string/car_image" />

</RelativeLayout>